Ignore backend uploads and temp files

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ frontend/build/
 frontend/.flutter-plugins
 frontend/.flutter-plugins-dependencies
 frontend/.env
+# Backend runtime / temp
+backend/tempCodeRunnerFile.*
+backend/uploads/
+
 
 ####################################
 # Backend (common)
